# software-interview-project

./: .clang-format  .cmake-format.yaml  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: CompilerFlags.cmake  CxxFlagsPrint.cmake  Options.cmake
sources/: CMakeLists.txt
sources/include/3laws/: dynamical_model_abstract_template.hpp
tests/: CMakeLists.txt  matplotlibcpp.hpp  test.cpp
